fix(content-explorer): Align button icon colors

--- a/src/elements/content-explorer/ItemList.scss
+++ b/src/elements/content-explorer/ItemList.scss
@@ -24,6 +24,7 @@
         .btn {
             margin-left: 8px;
             background-color: $white;
+            border-color: $bdl-gray-10;
         }
 
         .be-is-touch & {
@@ -54,6 +55,10 @@
 
         .bce-more-options {
             opacity: 1;
+        }
+
+        .bce-btn-more-options {
+            border-color: $grey-blue;
         }
 
         .bce-item-coloumn,
